# otas_serialization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.bat
benchmark/: CMakeLists.txt  benchmark.bat  test_1.cpp  test_2.cpp  test_3.cpp  test_basic.cpp  test_effiency_1.cpp  test_effiency_array.cpp  test_effiency_map.cpp  test_effiency_monster.cpp  test_effiency_person.cpp  test_effiency_rect.cpp  test_effiency_vec.cpp  test_json.cpp
doc/: design.md  readme_chinese.md  readme_english.md
example/: example.cpp
include/: otas_binary.h  otas_check.h  otas_reflection.h  otas_serializer.h
include/otas/: otas_check.h  otas_json.h  otas_reflection.h  otas_serializer.h
